<resources>
    <string name="app_name">410570176 梁顏欣</string>
    <string name="app_title">猜拳遊戲</string>
    <string name="tv_name">名字</string>
    <string name="tv_winner">勝利者</string>
    <string name="tv_mmora">我方出拳</string>
    <string name="tv_cmora">電腦出拳</string>
    <string name="btn_scissor">剪刀</string>
    <string name="btn_stone">石頭</string>
    <string name="btn_paper">布</string>
    <string name="btn_mora">猜拳</string>
    <string name="plain_text">請輸入玩家姓名</string>
    <string name="tv_text">請輸入姓名開始</string>
</resources>