<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/plain_text"
        android:layout_width="243dp"
        android:layout_height="68dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/plain_text"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="303dp"
        android:layout_height="65dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="312dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text">

        <RadioButton
            android:id="@+id/btn_scissor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_scissor" />

        <RadioButton
            android:id="@+id/btn_stone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stone" />

        <RadioButton
            android:id="@+id/btn_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_paper" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_mora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="228dp"
        android:shadowColor="@color/white"
        android:text="@string/btn_mora"
        android:textColorHint="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:strokeColor="@color/material_dynamic_neutral80" />


</androidx.constraintlayout.widget.ConstraintLayout>